feat: add server day api
